Update script and stylesheet paths in index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@lovable_dev">
     <meta name="twitter:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/00852c9b-a86a-4a0b-9223-225400d0bacb/id-preview-889cc4ba--e613cb96-ea66-48e3-95a7-0b58a93e1cdf.lovable.app-1746688110764.png">
-    <script type="module" crossorigin="" src="index-DOLk9SUt.js"></script>
-      <link rel="stylesheet" crossorigin="" href="index-Cf7zHtR1.css">
+   <script type="module" src="./assets/index-[DOLk9SUt].js"></script>
+<link rel="stylesheet" href="./assets/index-[Cf7zHtR1].css">
+
 
   
 <style>
